Changed class name and created template for Pizza Mad Lib

--- a/madLibs.html
+++ b/madLibs.html
@@ -10,13 +10,13 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <div id="theHeader">
+        <div class="theHeader">
             <img src="MadLibs-Logo.png" alt="madLibsLogo" height="300px" width="750px" />
         </div>
-        <div id="madLibsOpts">
+        <div class="madLibs">
             <h2>Mad Libs: </h2>
             <ul class="list-group">
-                <li class="list-group-item"><a href="#">BOOKish Mad Libs</a></li>
+                <li class="list-group-item"><a href="bookish.html">Pizza Pizza Mad Libs</a></li>
                 <li class="list-group-item"><a href="#">Harry Potter Mad Libs</a></li>
             </ul>
         </div>
