added additional span tags

--- a/bookish.html
+++ b/bookish.html
@@ -10,7 +10,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
     </head>
-    <body>
+    <body ng-app="">
         <div class="theHeader">
             <img src="MadLibs-Logo.png" alt="madLibsLogo" height="300px" width="750px" />
         </div>
@@ -19,14 +19,21 @@
 
             </div>
             <div class="main">
+                <!-- <span class="typeVal"></span> -->
                 <p>
-                    Pizza was invented by <span class="eneteredVal"></span> <span class="eneteredVal"></span> chef named <span class="eneteredVal"></span>. To make a pizza, you need to take a lump of <span class="eneteredVal"></span>, and make a thin, round <span class="eneteredVal"></span> <span class="eneteredVal"></span>.
+                    Pizza was invented by <span class="eneteredVal"><span class="typeVal"></span></span> <span class="eneteredVal"><span class="typeVal"></span></span> chef named <span class="eneteredVal"><span class="typeVal"></span></span>.
                 </p>
                 <p>
-                    Then you cover it with <span class="eneteredVal"></span> sauce, <span class="eneteredVal"></span> cheese, and fresh chopped <span class="eneteredVal"></span>. Next you have to bake it in a very hot <span class="eneteredVal"></span>. When it is done, cut it into <span class="eneteredVal"></span> <span class="eneteredVal"></span>.
+                    To make a pizza, you need to take a lump of <span class="eneteredVal"><span class="typeVal"></span></span>, and make a thin, round <span class="eneteredVal"><span class="typeVal"></span></span> <span class="eneteredVal"><span class="typeVal"></span></span>.
                 </p>
                 <p>
-                    Some kids like <span class="eneteredVal"></span> pizza the best, but my favorite is the <span class="eneteredVal"></span> pizza. If I could, I would eat pizza <span class="eneteredVal"></span> times a day!
+                    Then you cover it with <span class="eneteredVal"><span class="typeVal"></span></span> sauce, <span class="eneteredVal"><span class="typeVal"></span></span> cheese, and fresh chopped <span class="eneteredVal"><span class="typeVal"></span></span>.
+                </p>
+                <p>
+                    Next you have to bake it in a very hot <span class="eneteredVal"><span class="typeVal"></span></span>. When it is done, cut it into <span class="eneteredVal"><span class="typeVal"></span></span> <span class="eneteredVal"><span class="typeVal"></span></span>.
+                </p>
+                <p>
+                    Some kids like <span class="eneteredVal"><span class="typeVal"></span></span> pizza the best, but my favorite is the <span class="eneteredVal"><span class="typeVal"></span></span> pizza. If I could, I would eat pizza <span class="eneteredVal"><span class="typeVal"></span></span> times a day!
                 </p>
             </div>
         </div>
